# prac3.2

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.c
lib/: CMakeLists.txt
lib/include/: hash_table.h  word_stats.h
lib/src/: hash_table.c  word_stats.c
tests/: CMakeLists.txt  test_hash_table.c
tools/: generate_test_file.py
